<resources>
    <string name="app_name">My Application sqlite</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enterprise_name">Enterprise Name</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="web_URl">Web URL</string>
    <string name="products_n_service">Products and services</string>
    <string name="consultancy">Consultancy</string>
    <string name="custom_development">Custom development</string>
    <string name="software_factory">Software factory</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="classification">Classification</string>
    <string name="all">All</string>
</resources>